--- a/010.JavaScript简介.md
+++ b/010.JavaScript简介.md
@@ -234,203 +234,232 @@ let data = {                // 拥有两个属性的对象
 
 上面代码中所示的，用来创建数组的 `[]` 符号 , 和创建对象中的 `{}` ,这些语法被称为初始化表达式；这些相关的内容会在第四章详细介绍。比如获取对象的属性和数组元素的`.`  和 `[]` ，这也是一个表达式。
 
-除了上面的表达式以外，在JavaScript中，最常见语法还有运算符：（ TODO 注：这一句翻译的不好，后面仔细研究）
-
-原文： One of the most common ways to form expressions in JavaScript is to use operators:
+在JavaScript中，最常见的表达式是操作符。
 
 ``` js
-// Operators act on values (the operands) to produce a new value. 
-// Arithmetic operators are some of the simplest:
-3 + 2 // => 5: addition
-3 - 2 // => 1: subtraction
-3 * 2 // => 6: multiplication
-3 / 2 // => 1.5: division
-points[1].x - points[0].x // => 1: more complicated operands also work 
-"3" + "2" // => "32": + adds numbers, concatenates strings
+// 对值使用运算符，会返回一个新的值
+// 先介绍一下比较简单的算术运算符
+3 + 2                       // => 5: 加法运算
+3 - 2                       // => 1: 减法运算
+3 * 2                       // => 6: 乘法运算
+3 / 2                       // => 1.5: 除法运算
+points[1].x - points[0].x   // => 1: 也可以用在变量或者属性的操作
+"3" + "2"                   // => "32": 字符串形式的数字使用 + 号, 
+                            // 作用是连接成新的字符串
 
-// JavaScript defines some shorthand arithmetic operators
-let count = 0; // Define a variable
-count ++; // Increment the variable
-count --; // Decrement the variable
-count += 2; // Add 2: same as count = count + 2;
-count *= 3; // Multiply by 3: same as count = count * 3;
-count // => 6: variable names are expressions, too.
+// JavaScript 定义了一些简写的运算符用法
+let count = 0;              // 定义了一个变量
+count ++;                   // 变量自增
+count --;                   // 变量自减
+count += 2;                 // 变量本身加2: 类似 count = count + 2;
+count *= 3;                 // 变量本身乘3: 类似 count = count * 3;
+count                       // => 6: 变量名本身也是一个表达式
 
-// Equality and relational operators test whether two values are equal,
-// unequal, less than, greater than, and so on. They evaluate to true or false.
+// 关系运算符用来判断两个值之间的关系
+// 不等于，小于，小于等于，大于，大于等于等...
+// 关系运算符返回一个布尔值。
 let x = 2,
-    y = 3; // These = signs are assignment, not equality tests
-x === y // => false: equality
-x !== y // => true: inequality
-x < y // => true: less-than
-x <= y // => true: less-than or equal
-x > y // => false: greater-than
-x >= y // => false: greater-than or equal
-"two" === "three" // => false: the two strings are different
-"two" > "three" // => true: "tw" is alphabetically greater than "th"
-false === (x > y) // => true: false is equal to false
+    y = 3;              // 符号 = 是用来赋值的，不是用来判断y是否等于3的
+x === y                 // => false: 判断两个值相同
+x !== y                 // => true: 判断两个值不相同
+x < y                   // => true: 判断左边的值 小于 右边
+x <= y                  // => true: 判断左边的值 小于 等于右边
+x > y                   // => false: 判断左边的值 大于 右边的值
+x >= y                  // => false: 判断左边的值 大于等于 右边的值
+"two" === "three"       // => false: 两个字符串不相同
+"two" > "three"         // => true: 左右两边的第一个字母't"相等，
+                        // 但是第二个字符开始，"w" 大于 "h"，后面的字符就不再进行比较
+false === (x > y)       // => true: 左右两边先运算，然后再判断，两边都是false
 
-// Logical operators combine or invert boolean values
-(x === 2) && (y === 3) // => true: both comparisons are true. && is AND
-(x > 3) || (y < 3) // => false: neither comparison is true. || is OR
-!(x === y) // => true: ! inverts a boolean value
+// 运算符的组合使用
+(x === 2) && (y === 3)  // => true: && 用来判断两边的值都是true 
+                        // &&类似中文并且的意思，需要两边同时满足条件。
+(x > 3) || (y < 3)      // => false: || 用来判断两边的值至少有一个为true 
+                        // || 类似中文或者的意思，两边有一个值为true就属于符合条件。
+
+// 取反操作
+!(x === y)              // => true: ! 是把后面的值转成布尔值后取反
 ```
 
-If JavaScript expressions are like phrases, then JavaScript statements are like full sen‐ tences. Statements are the topic of `Chapter 5` . Roughly, an expression is something that computes a value but doesn’t do anything: it doesn’t alter the program state in any way. Statements, on the other hand, don’t have a value, but they do alter the state. You’ve seen variable declarations and assignment statements above. The other broad category of statement is control structures, such as conditionals and loops. You’ll see examples below, after we cover functions.
+如果把JavaScript的表达式比作是短语，那么语句就是一个完整的句子。在第五章的时候会重点介绍语句。表达式可以用来计算值但是它并不会改变原有的值。而语句本身没有值，但是它会改变值，比如上面的变量声明和赋值操作；其中有一类叫做控制语句的非常重要，比如循环，判断等。
 
-A function is a named and parameterized block of JavaScript code that you define once, and can then invoke over and over again. Functions aren’t covered formally until `Chapter 8` , but like objects and arrays, you’ll see them many times before you get to that chapter. Here are some simple examples:
+函数是一个可以生成独立空间并且接受参数的代码块，定义之后，可以复用。这在第八章的时候会重点的介绍。在你看到第八章之前，你会经常看到它，所以这里放一些简单的例子，先简单了解一下；
 
 ``` js
-// Functions are parameterized blocks of JavaScript code that we can invoke.
-function plus1(x) { // Define a function named "plus1" with parameter "x"
-    return x + 1; // Return a value one larger than the value passed in
-} // Functions are enclosed in curly braces
+let y = 3;
+// 函数在调用的时候可以接受参数
+function plus1(x) {     // 定义一个接受参数x的函数 plus1
+    return x + 1;       // 把传入的参数加1后，返回出去
+}                       // 函数的语法使用一对花括号进行包裹 
+plus1(y)                // => 4: y 在上面赋值了 3, plus1 会返回3+1，所以结果是4
 
-plus1(y) // => 4: y is 3, so this invocation returns 3+1
-
-let square = function(x) { // Functions are values and can be assigned to vars
-    return x * x; // Compute the function's value
-}; // Semicolon marks the end of the assignment.
-square(plus1(y)) // => 16: invoke two functions in one expression
+let square = function(x) { 
+    // return 之后的内容是函数对外的返回值，
+    // 该返回值可以赋值给其他变量
+    return x * x;       // 计算变量的值
+};  // 分号用来表示一条语句结束（注: 虽然分号可以省略，但是推荐养成写分号的习惯）
+square(plus1(y))        // => 16: 同时调用两个函数
 ```
 
-In ES6 and later, there is a shorthand syntax for defining functions. This concise syn‐ tax uses => to separate the argument list from the function body, so functions defined this way are known as arrow functions. Arrow functions are most commonly used when you want to pass an unnamed function as an argument to another function. The preceding code looks like this when rewritten to use arrow functions:
+上面是通用的函数写法，在ES6的规范中，提出了箭头函数的语法 ，通过 `=>` 符号来连接 **函数的参数** 与 **函数的主体** 。如果你打算写一个匿名函数，那么使用箭头函数的会非常的简洁和方便。
+
+把上面的函数，用ES6的语法写一遍，代码如下: 
 
 ``` js
-const plus1 = x => x + 1; // The input x maps to the output x + 1 
-const square = x => x * x; // The input x maps to the output x * x
-plus1(y) // => 4: function invocation is the same 
-square(plus1(y)) // => 16
+let y = 3;
+const plus1 = x => x + 1;   // 函数的参数是 x , 返回值是 x + 1
+const square = x => x * x;  // 函数的参数是 x , 返回值是 x * x
+plus1(y)                    // => 4: 功能上和上面的 plus1 函数一模一样
+square(plus1(y))            // => 16
 ```
 
-When we use functions with objects, we get methods:
+除了我们定义的函数以外，我们还可以使用对象上的方法，比如下面例子中的代码:
+
+> 注: 如果一个函数是挂在某个对象上的，通常把这类函数叫做"方法"；比如某个对象上有一个 `push` 函数，通常也会以 "push方法" 来称呼它。
 
 ``` js
-// When functions are assigned to the properties of an object, we call
-// them "methods."  All JavaScript objects (including arrays) have methods:
-let a = []; // Create an empty array
-a.push(1, 2, 3); // The push() method adds elements to an array
-a.reverse(); // Another method: reverse the order of elements
+// 所有数组类型的数据，都天生具有下面的方法
+let a = [];  // 创建一个空数组
+a.push(1, 2, 3); //  这里的 push() 方法的作用是将元素添加到数组中
+a.reverse(); // reverse 方法是将数组内的元素进行倒叙操作
 
-// We can define our own methods, too. The "this" keyword refers to the object 
-// on which the method is defined: in this case, the points array from earlier. 
+// 我们也可以自定义一个方法，下面代码里的this指的是对象 points 本身
+let points = [              // 拥有2个元素的数组
+    {
+        x: 0,
+        y: 0
+    },                      // 每个元素都是一个对象
+    {
+        x: 1,
+        y: 1
+    }
+];
+points.dist = function() { // 定义一个两点之间距离的方法
+    let p1 = this[0]; // 第一个元素
+    let p2 = this[1]; // 第二个元素
+    let a = p2.x - p1.x; // 亮点之间的x坐标差值
+    let b = p2.y - p1.y; // 亮点之间的y坐标差值
 
-points.dist = function() { // Define a method to compute distance between points
-    let p1 = this[0]; // First element of array we're invoked on
-    let p2 = this[1]; // Second element of the "this" object
-    let a = p2.x - p1.x; // Difference in x coordinates
-    let b = p2.y - p1.y; // Difference in y coordinates
-    return Math.sqrt(a * a + // The Pythagorean theorem
-        b * b); // Math.sqrt() computes the square root 
+    // Math.sqrt()用来处理平方根
+    return Math.sqrt(a * a + b * b);// 使用勾股定理来计算
 };
-points.dist() // => Math.sqrt(2): distance between our 2 points
+points.dist() // => Math.sqrt(2): 两点之间的距离
 ```
 
-Now, as promised, here are some functions whose bodies demonstrate common Java‐ Script control structure statements:
+
+> this关键字比较重要，后面会详细进行介绍，总结成一句话就是: **谁调用了该函数，那么该函数内的this就指向谁**；这里的 dist 函数是 `points` 使用`points.dist()`调用的，`dist` 内的this就指向 `points`;
+
+
+下面介绍JavaScript中常见的流程控制语句:
 
 ``` js
-// JavaScript statements include conditionals and loops using the syntax
-// of C, C++, Java, and other languages.
-function abs(x) { // A function to compute the absolute value.
-    if (x >= 0) { // The if statement...
-        return x; // executes this code if the comparison is true.
-    } // This is the end of the if clause.
-    else { // The optional else clause executes its code if
-        return -x; // the comparison is false.
-    } // Curly braces optional when 1 statement per clause.
-} // Note return statements nested inside if/else.
+// JavaScript 的判断和循环语句，类似 C, C++, Java 等其他语言.
+// 如果你有其他面向对象语言的基础，你学起来会事半功倍
+function abs(x) {   // 写一个计算绝对值的方法
+    if (x >= 0) {   // if语句;表示如果满足什么条件，则执行{}内的操作
+        // 把x的值返回出去，并终止函数的执行
+        return x;   // 如果参数 x 的值大于等于0，则执行这行代码；
+    } // if语句的主体使用{}进行包裹，}表示语句的结束位置
+    else {          // 如果不满足上面的if判断条件,则执行下面else里面的代码;
+        return -x;  // 对数值进行取反；注意负号和上面布尔取反的感叹号 ! 之间有区别的。 
+    } // else 是对上面if的补充，它是非必需的，你可以只写 if 语句而不写 else 语句
+} // 注意，这个函数内的return都是写在 if / else 内的
 
-abs(-10) === abs(10) // => true
+abs(-10) === abs(10)        // => true
 
-function sum(array) { // Compute the sum of the elements of an array
-    let sum = 0; // Start with an initial sum of 0.
-    for (let x of array) { // Loop over array, assigning each element to x.
-        sum += x; // Add the element value to the sum.
-    } // This is the end of the loop.
-    return sum; // Return the sum.
+function sum(array) {       // 计算数组内的所有元素的总和
+    let sum = 0;            // 定义一个变量sum用来储存所有元素的总和，初始时候赋值为 0
+    for (let x of array) {  // 遍历参数中的数组，每次都把目标元素赋值给变量 x 
+        // 这条语句类似 sum = sum + x ; 
+        sum += x;           // 把每次遍历的元素，累加到变量sum上
+    }                       // 循环结束
+    return sum;             // 把变量sum的值返回出去
 }
-sum(primes) // => 28: sum of the first 5 primes 2+3+5+7+11
+let primes = [2, 3, 5, 7, 11];
+sum(primes) // => 28: 函数sum，计算数组 primes 内 5 个元素之和 2+3+5+7+11
 
-function factorial(n) { // A function to compute factorials
-    let product = 1; // Start with a product of 1
-    while (n > 1) { // Repeat statements in {} while expr in () is true
-        product *= n; // Shortcut for product = product * n;
-        n--; // Shortcut for n = n - 1
-    } // End of loop
-    return product; // Return the product
+// 要理解下面这个函数，可以先了解一下数学中的阶乘概念
+function factorial(n) {     // 计算一个正整数阶乘的函数
+    let product = 1;        // 以1作为阶乘的开始
+    while (n > 1) {         // 只要满足参数 n 大于 1 的条件，会持续执行花括号 {} 内的代码
+        product *= n;       // 等价于 product = product * n;
+        // 使用 while 循环的时候，一定要控制好条件，否则会出现死循环，导致程序卡死的现象
+        n--;                // 等价于 n = n - 1;
+    }                       // while循环结束
+    return product;         // 返回最后的阶乘结果
 }
 factorial(4) // => 24: 1*4*3*2
 
-function factorial2(n) { // Another version using a different loop
-    let i, product = 1; // Start with 1
-    for (i = 2; i <= n; i++) // Automatically increment i from 2 up to n
-        product *= i; // Do this each time. {} not needed for 1-line loops
-    return product; // Return the factorial
+// 另外一种阶乘的写法
+// 这种写法里的for循环，省略了花括号 {}，虽然这种写法是合法的，但是非常不推荐
+function factorial2(n) {       
+    let i, product = 1;         // 以1作为阶乘的开始，并额外声明一个变量 i
+    for (i = 2; i <= n; i++)    // i用来控制条件，并在初始的时候赋值2
+        product *= i;           // 注意省略{}的情况下的代码缩进
+    return product;             // 返回最后的阶乘结果
 }
-factorial2(5) // => 120: 1*2*3*4*5
+factorial2(5)                   // => 120: 1*2*3*4*5
 ```
 
-JavaScript supports an object-oriented programming style, but it is significantly dif‐ ferent than “classical” object-oriented programming languages. `Chapter 9` covers object-oriented programming in JavaScript in detail, with lots of examples. Here is a very simple example that demonstrates how to define a JavaScript class to represent 2D geometric points. Objects that are instances of this class have a single method, named distance(), that computes the distance of the point from the origin:
+JavaScript 支持面向对象的编程风格，但是它与传统的面向对象语言还是有很大差异的。在后面第九章的那里，会使用大量的例子来详细介绍JavaScript中的面向对象编程方法。下面是一个非常简单的小例子，演示了在JavaScript中使用类来表示坐标的 x 轴和 y 轴。并且在这个类上还定义了一个 `distance` 方法，这个方法用来计算某一个点到坐标原点的距离。
 
-```js   
-class Point {               // By convention, class names are capitalized.
+```js
+class Point {               // 所有语言的惯例，写类名的时候，首字母需要大写
+    constructor(x, y) {     // constructor 函数用来初始化新的实例
+        this.x = x;         // 初始化对象
+        this.y = y;         // 将传入的参数初始化为一个对象
+    }                       // 在构造函数内不需要 return
 
-    constructor(x, y) {     // Constructor function to initialize new instances.
-        this.x = x;         // This keyword is the new object being initialized.
-        this.y = y;         // Store function arguments as object properties.
-    }                       // No return is necessary in constructor functions.
-    distance() {            // Method to compute distance from origin to point.
-        return Math.sqrt(   // Return the square root of x2 + y2.
-        this.x * this.x +   // this refers to the Point object on which
-        this.y * this.y     // the distance method is invoked. );
-    } 
-
+    // 逻辑和上面points.dist一样的
+    distance() {            // 计算某一个点到坐标原点的距离
+        return Math.sqrt(   
+        this.x * this.x +   // this 指向 Point 的实例
+        this.y * this.y     
+    }
 }
 
-// Use the Point() constructor function with "new" to create Point objects 
-let p = new Point(1, 1); // The geometric point (1, 1).
+// 使用 new 关键字来创建构造函数 Point()，返回值是一个对象
+let p = new Point(1, 1);    // 传入参数 (1, 1)用来初始化坐标点
 
-// Now use a method of the Point object p
-p.distance()                // => Math. SQRT2
-
+// p 是 Point 的实例，调用上面的 distance 方法
+p.distance()                // => 进行勾股定理的运算
 ``` 
-This introductory tour of JavaScript’s fundamental syntax and capabilities ends here, but the book continues with self-contained chapters that cover additional features of the language:
 
-_Chapter 10, Modules_
+JavaScript基本语法的预览，到这里就算结束了，后面还有一些独立模块的内容，这里也介绍一下。
 
-Shows how JavaScript code in one file or script can use JavaScript functions and classes defined in other files or scripts.
+_第十章, 模块_
 
-_Chapter 11, The JavaScript Standard Library_
+“模块”是指将功能拆分成独立的、可复用的单独脚本或文件，一般会借助函数和类来完成。
 
-Covers the built-in functions and classes that are available to all JavaScript pro‐ grams. This includes important data stuctures like maps and sets, a regular
+_第十一章, JavaScript 标准库_
 
-expression class for textual pattern matching, functions for serializing JavaScript data structures, and much more.
+涵盖了JavaScript所有的内置函数和类，比如包含了Map和Set等重要的数据结构。
 
-_Chapter 12, Iterators and Generators_
+_第十二章, 迭代器和生成器_
 
-Explains how the for/of loop works and how you can make your own classes iterable with for/of. It also covers generator functions and the yield statement.
+介绍 for/of 的工作方式，以及如何用它进行迭代。同时包含了generator函数和yield语句。
 
-_Chapter 13, Asynchronous JavaScript_
+_第十三章, JavaScript异步_
 
-This chapter is an in-depth exploration of asynchronous programming in Java‐ Script, covering callbacks and events, Promise-based APIs, and the async and await keywords. Although the core JavaScript language is not asynchronous, asynchronous APIs are the default in both web browsers and Node, and this chapter explains the techniques for working with those APIs.
+介绍了 JavaScript 的异步编程，涵盖了回调函数和事件，基于Promise的API，以及 async 和 await 的用法。虽然JavaScript本身不是异步语言，但是浏览器事件和Node.js的API都是默认异步的，本章主要介绍了这些API的使用。
 
-_Chapter 14, Metaprogramming_
+_第十四章, Metaprogramming_
 
-Introduces a number of advanced features of JavaScript that may be of interest to programmers writing libraries of code for other JavaScript programmers to use.
+引入了很多JavaScript的高级功能，如果你是打算自己进行JavaScript库的封装，这一章不容错过！
 
-_Chapter 15, JavaScript in Web Browsers_
+_第十五章, 浏览器中的JavaScript_
 
-Introduces the web browser host environment, explains how web browsers exe‐ cute JavaScript code, and covers the most important of the many APIs defined by web browsers. This is by far the longest chapter in the book.
+浏览器是JavaScript的常见宿主环境，本章详细阐述了浏览器是如何进行 JavaScript 的代码解析，并涵盖浏览器中很多重要的API，本书中花了大量的笔墨来介绍这些内容。
 
-_Chapter 16, Server-Side JavaScript with Node_
+_第十六章, Node.js中的JavaScript_
 
-Introduces the Node host environment, covering the fundamental programming model and the data structures and APIs that are most important to understand.
+Node.js 也是JavaScript的常见宿主环境，本章涵盖了 Node.js 常用的 API 以及数据结构等信息。
 
-_Chapter 17, JavaScript Tools and Extensions_
+_第十七章, JavaScript工具和扩展_
 
-Covers tools and language extensions that are worth knowing about because they are widely used and may make you a more productive programmer.
+涵盖了很多已经广泛应用，并且值得深入研究的工具和语言扩展，借助这些工具和扩展，可以让你写代码的效率如虎添翼。
 
-## 1.4 Example: Character Frequency Histograms
+## 1.4 案例: 字符柱状图的统计
 
 This chapter concludes with a short but nontrivial JavaScript program. `Example 1-1` is a Node program that reads text from standard input, computes a character frequency histogram from that text, and then prints out the histogram. You could invoke the program like this to analyze the character frequency of its own source code:
 
