--- a/010.JavaScript简介.md
+++ b/010.JavaScript简介.md
@@ -1,45 +1,53 @@
 # 第1章: JavaScript简介
 
-JavaScript是一门为Web网页而生的编程语言，基本上所有的网站都或多或少的使用了JavaScript这门语言，并且你现在使用的所有智能终端设备（PC电脑/平板/手机等），为了满足日常使用，基本都安装了网页浏览器，这些浏览器都内置了JavaScript的解释器；有了这些基础设备的支持，让JavaScript有了广泛的应用空间，也让JavaScript成为了目前世界上使用最广泛的编程语言，没有之一。除此以外，自从2009年Node.js的发布以后，让JavaScript拥有了脱离浏览器的运行能力，Node.js也深受广大开发者的喜爱，社区日益壮大，目前Node.js的生态已经很完善了；Node.js的成功也让JavaScript常用于后端开发。不过JavaScript本身也是一门令人诟病的语言，学习起来可能感觉很无厘头；但是这些都不是问题，无论你是从头开始学习的小白，还是对JavaScript理解不深入的开发者，这本书都会让你全面的掌握JavaScript这门语言。
+JavaScript 是一门为 Web 网页而生的编程语言，基本上所有的网站都或多或少的使用了 JavaScript 这门语言。并且你现在使用的所有智能终端设备（PC电脑/平板/手机等），基本上都安装了网页浏览器，这些浏览器几乎全部内置了 JavaScript 的解释器；有了这些基础设备的支持，让 JavaScript 有了广泛的应用空间，也让 JavaScript 成为了目前世界上使用最广泛的编程语言，没有之一。除此以外，自从 2009 年的 Node.js 发布，让 JavaScript 拥有了脱离浏览器运行的能力，Node.js 目前的发展势头非常好，深受广大开发者的喜爱，成千上万的开发者推动着社区的日益壮大，让 Node.js 的生态越来越完善。 Node.js 的成功也让 JavaScript 在后端开发领域中有了一席之地。不过 JavaScript 的语言本身是令人诟病的，很多人在学习的时候，甚至感觉很多地方非常无厘头。但是这些都不特别大的问题，无论你是从头开始学习的小白，还是已经在使用 JavaScript 进行写项目的开发者，这本书都会让你全面的掌握 JavaScript 这门语言。
 
-如果你以前使用过其他面向对象语言，那么你在学习JavaScript的时候会事半功倍，也更容易理解JavaScript的原理。需要事先知道的是，JavaScript是一门弱类型语言，变量在声明的时候是无需指定类型的，变量的类型取决于后续给它赋予什么类型的值。如果你以前是使用Java或者C++等强类型语言，开始可能感觉没有规则，很不适应，但是别担心，你很快就会适应；如果你以前是没有任何基础的小白，也不需要忧虑，JavaScript很好学。
+如果你以前使用过其他的面向对象语言，那么你在学习 JavaScript 的时候会事半功倍，也很容易理解 JavaScript 的语法。你需要事先知道的是: JavaScript 是一门弱类型语言，变量在声明的时候是不需要预先指定数据类型的，变量的类型只取决于后续给它赋予什么类型的值。如果你以前是使用 Java 或者 C++ 等强类型语言，开始接触的时候可能会感觉这种方式很不安全。如果你以前是没有任何基础的小白，之所以学习 JavaScript 仅仅是为了搞钱，这种情况的小伙伴也不需要担心，JavaScript 是很好学的语言。
 
-"JavaScript"的名字本身，可能会让你和Java产生误会；这是因为JavaScript创建之初，Java那会风头正盛，JavaScript创始人Brendan Eich为了蹭热度才起的这个名字，这在当时属于标题党。两者的关系类似"雷锋"和"雷峰塔"的关系，或者"老婆"和"老婆饼"的关系。目前JavaScript已经成为一种健壮高效的通用语言了，这些黑历史就没有必要深究了，我们学习技术才是硬道理。
+"JavaScript" 的名字本身，可能会让你和 Java 产生误会；这是因为发明 JavaScript 的时候，Java 那会风头正盛，JavaScript 创始人 Brendan Eich 为了蹭热度才起的这个名字，这是一种标题党的行为。两者的关系类似"雷锋"和"雷峰塔"的关系，或者"老婆"和"老婆饼"的关系。目前 JavaScript 已经发展成为一种健壮高效的通用语言了，这些黑历史就没有必要深究了，我们学习技术才是硬道理。
 
 <div style="border: 1px solid black; padding:10px; margin: 10px 0">
-  <center><h2>JavaScript: 名字, 版本和模式<h2></center>
-  <p>JavaScript 是 Netscape 创建的，至于历史演变没有什么好说的，这本书的使用的 ECMASctipt，是描述 JavaScript 这门语言的核心</p>
-  <p>目前常说的JavaScript基础语法指的是2010年发布的第五版ECMASctipt，ECMASctipt简称ES，而ES5指的是第五版的ECMAScript，这本书基于ES5进行渐进式书写，自从2015年的ECMAScript 2015开始，ECMAScript每年都会发布一个release版本的规范，比如ECMASctipt 2016(ES6), ECMASctipt 2017(ES7)...</p>
-  <p>虽然JavaScript早期的语法有很多缺陷，但是为了向后兼容，我们并不能粗暴的进行移除，为了解决这个问题，在ECMAScript2010这个版本开始引入严格模式的使用方式，详细可参考本书的第5.6.3节，那一节详细介绍了普通模式和严格模式的区别。从ES6开始，新的语法会隐式调用严格模式，比如你使用ES6的 class 创建类，则该类中的所有代码都自动使用严格模式进行解析，如果你在类的代码中使用以前有缺陷的语句，将不会被支持。本书会介绍以前老的JavaScript语法，但同时也会指出这些有缺陷的语句不能正常运行在严格模式中。</p>
+  <center><h2>JavaScript的名字, 版本和严格模式<h2></center>
+  <p>JavaScript 是 Netscape 创建的，至于历史演变没有什么好说的，JavaScript 这门语言的核心是一个叫做 ECMASctipt 的东西，ECMAScript 为 JavaScript 提供了核心的语言功能，规定了这们语言的书写规范和使用方法等。</p>
+  <p>目前常说的 JavaScript 基础语法，指的是 2010 年发布的第五版 ECMASctipt 规范，ECMASctipt 简称 ES，而 ES5 指的是第五版的 ECMAScript 。本书是基于 ES5 进行渐进式书写的，自从 2015 年发布的 ECMAScript 2015 开始，每年都会发布一个 ECMAScript release 版本的规范，比如 ECMASctipt 2015(简称 ES6), ECMASctipt 2016(简称 ES7) ...</p>
+  <p>虽然 JavaScript 早期的语法有很多缺陷，但是为了向后兼容，我们并不能粗暴的把以前的语法直接废弃处理，为了解决这个问题，在 ECMAScript 2010 这个版本里，开始引入严格模式的概念，详细内容可参考本书的第 5.6.3 节，那一节详细介绍了普通模式和严格模式的区别。从 ES6 开始，新的语法会隐式调用严格模式，比如你使用 ES6 的 class 创建类，则该类中的所有代码都自动使用严格模式进行解析，如果你在类的代码中使用了以前有缺陷的语句，将不会被支持。本书涵盖了以前老的 JavaScript 语法，介绍的同时也会告诉你这些有缺陷的语句是不能用在严格模式中的。</p>
 </div>
 
-为了满足日常使用，所有的语言都有自己的标准库及用于基本输入和输出的平台。JavaScript的核心部分定义了这本语言的使用规范以及处理数据的最小API，但是它并不包含输入和输出的功能。输入和输出工作交给了JavaScript的宿主环境进行处理。
+为了满足日常使用，所有的语言都有自己的标准库以及用于基本输入和输出的平台。JavaScript 的核心部分定义了这本语言的使用规范以及处理数据的API，但是它并不包含输入和输出的功能。输入和输出工作交给了 JavaScript 的宿主环境进行实现。
 
-最常见的JavaScript宿主环境就是我们使用的浏览器及Node.js；在浏览器中，用户对鼠标和键盘的操作可以转化为JavaScript的输入信息，浏览器还允许JavaScript基于这些输入信息发起Http请求或者别的输出操作，比如JavaScript可以借助HTML和CSS向用户的输出他的输入信息。
+最常见的 JavaScript 宿主环境就是我们使用的浏览器及 Node.js ；在浏览器中，用户对鼠标和键盘的操作可以转化为 JavaScript 的输入信息，你可以用 JavaScript 在浏览器中基于用户的操作发起 Http 请求或者做别的输出操作，比如 JavaScript 可以借助 HTML 和 CSS 向用户原样输出他的输入信息。
 
-而Node.js可以让JavaScript拥有访问整个操作系统的权利，允许JavaScript程序读取和写入系统文件，通过网络发送和接受数据等等操作，Node.js可以轻松的实现一个WEB服务器，还可以通过写一些简单的代码来代替Shell脚本进行工作。
+而 Node.js 可以让 JavaScript 拥有访问整个操作系统的权利，允许 JavaScript 程序读取和写入系统文件，发送和接受网络数据等操作，Node.js 可以轻松的实现一个 WEB 服务器，还可以简单的写一些代码来代替 Shell 脚本的工作。
 
-本书的大部分内容都是介绍JavaScript这门语言的本身，第11章介绍了JavaScript的标准库，第15章介绍了JavaScript的宿主环境浏览器，第16章介绍了JavaScript的宿主环境Node.js。
+本书的大部分内容都是介绍 JavaScript 这门语言的本身，第 11 章介绍了 JavaScript 的标准库，第 15 章介绍了 JavaScript 的浏览器宿主环境，第 16 章介绍了 JavaScript 的 Node.js 宿主环境。
 
-本书首先介绍了JavaScript的基础知识，然后在这些基础之上继续探讨了更高级的用法。阅读本章的时候，你可以根据自己的实际情况有选择的进行阅读。如果你已经是一名经验丰富的JavaScript程序员，阅读的时候跳过本章也是没有任何问题的，不过在跳过之前，推推荐你看一下本章的 `案例 1-1` 。
+本书首先介绍了 JavaScript 的基础知识，然后在这些基础之上继续探讨了更高级的用法。阅读本章的时候，你可以根据自己的实际情况有选择的进行阅读。如果你已经是一名经验丰富的 JavaScript 程序员，阅读的时候跳过本章是没有任何问题的，不过在跳过之前，推荐你看一下本章最后的 `案例 1-1` 。
 
-学习编程的时候，如果单纯的按照A, B, C, D, E这种顺序逐个学习，对掌握这们语言的帮助并不是很大，因为每一个模块都不是独立存在的，都会和其它模块相关联。所以本书在介绍某个模块时，会穿插必要的相关知识。
+学习编程的时候，如果单纯的按照 A, B, C, D, E 这种顺序逐个学习，并不能很好的掌握这们语言，因为每个模块的知识点都不是独立存在的，都会和其它模块相关联。我们在学习的时候要跳出这个知识点本身，站在更高的位置总结相类似的方法和用法，以及这些相似方法都是用在什么场景下的，最后根据方法的优缺点进行扬长避短的使用。原书在介绍某个模块时，也会穿插一些相关知识，但是穿插的内容惜字如金，并不能入木三分。译者在翻译这本书的时候，会根据自己的经验进行批注，遇到重点知识，会重点介绍；如果某个知识点有相似语法和方法的时候，会尽量把相关的知识都彻底的介绍清楚。
 
 ##  1.1 了解 JavaScript
 
-当你跟着本书学习JavaScript时，请一定要动手试一下本书中的案例，然后进行修改，看它是不是按照你的预期进行工作，这么做可以加深你对JavaScript这门语言的理解（如果你能动手敲一遍本书中的案例，那就更好啦）。
+当你跟着本书学习 JavaScript 时，请一定要亲自动手试一下本书中的案例。然后还可以修改案例中的代码，看看它是不是按照你的预期进行执行的，这么做可以加深你对 JavaScript 这门语言的理解（如果你能动手敲一遍本书案例中的代码，那就更好啦）。
 
-为了能够正常的查看结果，你需要一个JavaScript的解释器。最简单的办法就是使用浏览器的开发者工具（使用 <kbd>F12</kbd>，<kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>i</kbd> 或者 <kbd>Command</kbd>+<kbd>Option</kbd>+<kbd>i</kbd> 进行打开），并选中其中的 `console` 选项卡。然后就可以输入JavaScript代码了，输入完毕敲回车键，就可以看到代码的输出结果了。开发者工具通常显示在浏览器窗口的底部或者右侧，你可以根据自己的使用习惯进行调整，你甚至可以把它和浏览器分离开，作为单独的窗口进行使用 (如 `图 1-1` 中的展示)。
+为了能够正常的查看结果，你需要一个 JavaScript 的解释器。
+
+### 浏览器的开发者工具
+
+最简单的办法就是使用浏览器的开发者工具（Windows电脑可以通过按键盘上的 <kbd>F12</kbd>，或者按 <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>i</kbd> 进行打开；Mac电脑可以通过按 <kbd>Command</kbd>+<kbd>Option</kbd>+<kbd>i</kbd> 进行打开），打开后确保选中其中的 `console` 选项卡（有的浏览器也叫"控制台"）。然后就可以在里面输入 JavaScript 代码了，输入完毕后敲回车键进行确认，就可以看到代码的输出结果了。开发者工具通常显示在浏览器窗口的底部或者右侧，你可以根据自己的使用习惯进行调整，你甚至可以把它和浏览器分离开，作为单独的窗口进行使用 (如 `图 1-1` 中的展示)。
 
 > TODO: 这张图很不清晰，可以考虑自己做一张相同的
 
 <div style="border: 1px solid black; padding:10px; margin: 10px 0">
-  <img src='./img/1-1.png'/>
+  <img src='https://a.axihe.com/edu/typescript/ZRra8BirAu.png'/>
 </div>
 
-<i>图 1-1. 火狐浏览器的开发人员工具中JavaScript控制台</i>
+<i>图 1-1. Chrome浏览器的控制台</i>
 
-另一种方式是从 `https://nodejs.org` 下载Node.js，在系统成功安装Nodejs以后，你只需要在终端里输入 `node` ，回车后就就可以得到一个交互式JavaScript对话框，在这Nodejs里属于REPL模块，类似浏览器的控制台。
+> 注: 原书使用火狐浏览器进行演示，因为图片质量一般，而且火狐的市场份额远远小于 Chrome 浏览器，所以译者改用 Chrome 浏览器做演示
+
+### Node.js 的 REPL 环境
+
+另一种方式是从 `https://nodejs.org` 下载 Node.js ，在系统成功安装 Node.js 以后，你只需要在终端里输入 `node` ，回车后就就可以得到一个交互式 JavaScript 对话框，在这 Nodejs 里属于 REPL 模块，类似浏览器的控制台。
 
 ``` bash
 $ node
@@ -67,7 +75,7 @@ false
 
 ## 1.2 Hello World
 
-当你准备正式学习JavaScript的时候，使用浏览器的开发者工具或Node.js的REPL交互环境，就非常不合适了，推荐使用编辑器进行写代码。你可以把JavaScript代码写在 `.js` 文件中，然后使用Node.js运行这个 `.js` 文件（写完JavaScript之后，请确保你的 `.js` 文件已经被保存）。或者把写好的代码复制到浏览器控制台或者Node.js REPL交互环境中去运行也是可以的。
+当你准备正式学习 JavaScript 的时候，使用上面介绍的 浏览器的开发者工具 或 Node.js 的 REPL 交互环境，就非常不合适了，效率太低了！推荐使用专业的代码编辑器进行写代码，个人比较推荐 VSCode 或者 WebStorm，这两个都是非常优秀的代码编辑器。你可以把JavaScript代码写在 `.js` 文件中，然后使用Node.js运行这个 `.js` 文件（写完JavaScript之后，请确保你的 `.js` 文件已经被保存）。或者把写好的代码复制到浏览器控制台或者Node.js REPL交互环境中去运行也是可以的。
 
 ``` 
 $ node snippet.js
@@ -463,7 +471,7 @@ _第十七章, JavaScript工具和扩展_
 
 ## 1.4 案例: 统计字母出现的频率并以直方图显示
 
-这一节介绍一个很简洁的例子，下面`案例 1-1`中一个基于　Node.js　的代码，主要功能是读取文本，统计出现的字母以及字母出现频率，并以直方图的形式展现出来。你可以用这个例子来分析代码本身的字母出现频率。
+这一节介绍一个很简洁的例子，下面 `案例 1-1` 中一个基于　Node.js　的代码，主要功能是读取文本，统计出现的字母以及字母出现频率，并以直方图的形式展现出来。你可以用这个例子来分析代码本身的字母出现频率。
 
 ```bash
 $ node charfreq.js < charfreq.js
